--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.9",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.10.1"
   }
